...
        text = "$count",
        style = MaterialTheme.typography.displayLarge,
        color = MaterialTheme.colorScheme.tertiary,
      )

      Spacer(Modifier.height(40.dp))
      FilledTonalButton(onClick = dropUnlessResumed { onBack() }) { Text("返回") }
    }
  }
}

@Preview(showBackground = true)
@Composable
...
